--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 # logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-# spring.data.mongodb.uri=mongodb://localhost/test
+spring.data.mongodb.uri=mongodb://localhost:27017,\
+  localhost:27018,localhost:27018/test?replSet=replica-set-0
